Fix active navigation link highlighting logic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
         <div class="nav-links">
             {% for item in site.navigation %}
             <a href="{% if item.external %}{{ item.url }}{% else %}{{ item.url | relative_url }}{% endif %}"
-                class="{% if item.class %}{{ item.class }}{% endif %} {% if page.url == item.url %}active{% endif %}" {%
-                if item.external %}target="_blank" {% endif %}>
+                class="{% if item.class %}{{ item.class }}{% endif %} {% if page.url == item.url or page.url contains item.url and item.url != '/' %}active{% endif %}"
+                {% if item.external %}target="_blank" {% endif %}>
                 {{ item.title }}
             </a>
             {% endfor %}
